Modificación del fichero index v2

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     
 
-    <!-- Comentarios sobre Bootstrap-->
+    <!-- Comentarios sobre Bootstrap Comentarios en la rama master v2 -->
 <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
